; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/miniupnpc/extr_miniupnpc.c_UPNPIGD_IsConnected.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/miniupnpc/extr_miniupnpc.c_UPNPIGD_IsConnected.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.UPNPUrls = type { i32 }
%struct.IGDdatas = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"Connected\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"Up\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @UPNPIGD_IsConnected(%struct.UPNPUrls* %0, %struct.IGDdatas* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.UPNPUrls*, align 8
  %5 = alloca %struct.IGDdatas*, align 8
  %6 = alloca [64 x i8], align 16
  %7 = alloca i32, align 4
  store %struct.UPNPUrls* %0, %struct.UPNPUrls** %4, align 8
  store %struct.IGDdatas* %1, %struct.IGDdatas** %5, align 8
  %8 = getelementptr inbounds [64 x i8], [64 x i8]* %6, i64 0, i64 0
  store i8 0, i8* %8, align 16
  %9 = load %struct.UPNPUrls*, %struct.UPNPUrls** %4, align 8
  %10 = getelementptr inbounds %struct.UPNPUrls, %struct.UPNPUrls* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.IGDdatas*, %struct.IGDdatas** %5, align 8
  %13 = getelementptr inbounds %struct.IGDdatas, %struct.IGDdatas* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = getelementptr inbounds [64 x i8], [64 x i8]* %6, i64 0, i64 0
  %17 = call i32 @UPNP_GetStatusInfo(i32 %11, i32 %15, i8* %16, i32* %7, i32* null)
  %18 = getelementptr inbounds [64 x i8], [64 x i8]* %6, i64 0, i64 0
  %19 = call i64 @strcmp(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* %18)
  %20 = icmp eq i64 0, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %28

22:                                               ; preds = %2
  %23 = getelementptr inbounds [64 x i8], [64 x i8]* %6, i64 0, i64 0
  %24 = call i64 @strcmp(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %23)
  %25 = icmp eq i64 0, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %22
  store i32 1, i32* %3, align 4
  br label %28

27:                                               ; preds = %22
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %26, %21
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @UPNP_GetStatusInfo(i32, i32, i8*, i32*, i32*) #1

declare dso_local i64 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
